# intreeactive

./: .gitignore  README.md  pyproject.toml
example/: tb_in_middle_earth_metadata.csv  tb_in_middle_earth_snpdists_matrix.txt  tb_in_middle_earth_tree.new
src/html_res/: help.html  main.css  main.js
src/intreeactive/: __init__.py  __main__.py  cli.py  intreeactive.py
tests/: tb_in_middle_earth_cluster1.tree  tb_in_middle_earth_cluster1_metadata.csv  tb_in_middle_earth_cluster1_snpdists.matrix  test_intreeactive.py  test_snp_dists.matrix  test_snp_metadata.csv  test_snp_tree.newick  test_tree_info.txt
